tests/golden/error/visibility_submodule/child.tg
// Child module with public and private items.

pub type PublicType = Nat

type PrivateType = Bool
